# GKD-test

./: README.md
Final version plus/Backend/: Server.cpp
Final version plus/Frontend/: CMakeLists.txt  client_opencv_nums.cpp
Final version plus/include/: model.h
Final version/Backend/: CMakeLists.txt  Server.cpp
Final version/Frontend/: CMakeLists.txt  client_opencv_nums.cpp
Final version/include/: model.h
Final version/server/: Server.cpp
part1/: CMakeLists.txt  Matrix.cpp  Matrix.h  test.cpp  test1.cpp  test2.cpp
part1/include/: Matrix.h  model.h
part2/: CMakeLists.txt  File-read.cpp
part2/include/: Matrix.h
part3/: CMakeLists.txt  opencv_nums.cpp
part3/include/: Matrix.h
part5/client/: CMakeLists.txt  Client_demo.cpp
part5/server/: CMakeLists.txt  Server_demo.cpp
part6/: CMakeLists.txt  opencv_nums.cpp
